# repository/types.go
@@ -1,10 +1,16 @@
 // This file contains types that are used in the repository layer.
 package repository
 
-type GetTestByIdInput struct {
-	Id string
-}
+import "time"
 
-type GetTestByIdOutput struct {
-	Name string
+// Profile, representing profile object on repository
+type Profile struct {
+	ID          uint64
+	FullName    string `json:"full_name" `
+	CountryCode string `json:"country_code" `
+	PhoneNumber string `json:"phone_number" `
+	Password    string `json:"password"`
+	CreatedAt   time.Time
+	UpdatedAt   time.Time
+	DeletedAt   time.Time
 }
